add GSAP animation

--- a/src/app/homepage/homepage.component.scss
+++ b/src/app/homepage/homepage.component.scss
@@ -65,6 +65,7 @@ section.content {
       font-family: made_soulmaze_outlineregular;
       font-size: 3.5rem;
       color: white;
+      z-index: 25;
     }
 
     ul {
